# iv

./: CMakeLists.txt  README.md  flake.nix
.direnv/: flake-profile-8-link
src/: color.h  image.cpp  image.h  main.cpp
src/image/: image.cpp  image.h
src/iv/: event.cpp  fit_and_center_image.cpp  iv.cpp  iv.h  kill.cpp  move.cpp  update.cpp  zoom.cpp
